# rust-cgi

./: .gitignore  CHANGELOG.adoc  CHANGELOG.md  Cargo.toml  LICENCE  README.adoc  README.md
.github/workflows/: lint.yml  test.yml
src/: lib.rs
