[package]
name = "rust-cgi"
version = "0.6.1"
authors = ["Amanda McCann <rory@technomancy.org>", "Kartikaya Gupta"]
license = "AGPL-3.0"
repository = "https://github.com/staktrace/rust-cgi"
description = "Create CGI programmes"
keywords = ["http", "cgi", "web"]
readme = "README.adoc"

[dependencies]
http = "0.2"
