[package]
name = "cgi"
version = "0.7.2"
authors = ["Amanda McCann <amanda@technomancy.org>", "Kartikaya Gupta"]
edition = "2021"
license = "AGPL-3.0"

description = "Library to help create CGI programs in Rust"
repository = "https://github.com/amandasaurus/rust-cgi"
readme = "README.md"
keywords = ["http", "cgi", "web"]
categories = ["web-programming", "network-programming"]
exclude = [".gitignore", ".github/**"]

[dependencies]
http = "1.0.0"
